--- a/notebook/finetuning.ipynb
+++ b/notebook/finetuning.ipynb
@@ -13,11 +13,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "FZTsHqVfMsH1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/beltransc/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from datasets import load_dataset\n",
         "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer, GenerationConfig, TrainingArguments, Trainer\n",
@@ -41,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -129,7 +138,44 @@
         "id": "K0kyzm5hMsH2",
         "outputId": "5c01778c-d1ab-43f1-a956-3260f910069b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Downloading readme: 4.65kB [00:00, 8.37MB/s]\n",
+            "Downloading data: 100%|██████████| 11.3M/11.3M [00:00<00:00, 11.4MB/s]\n",
+            "Downloading data: 100%|██████████| 442k/442k [00:00<00:00, 2.78MB/s]\n",
+            "Downloading data: 100%|██████████| 1.35M/1.35M [00:00<00:00, 9.17MB/s]\n",
+            "Generating train split: 100%|██████████| 12460/12460 [00:00<00:00, 104737.61 examples/s]\n",
+            "Generating validation split: 100%|██████████| 500/500 [00:00<00:00, 79275.42 examples/s]\n",
+            "Generating test split: 100%|██████████| 1500/1500 [00:00<00:00, 105600.32 examples/s]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "DatasetDict({\n",
+              "    train: Dataset({\n",
+              "        features: ['id', 'dialogue', 'summary', 'topic'],\n",
+              "        num_rows: 12460\n",
+              "    })\n",
+              "    validation: Dataset({\n",
+              "        features: ['id', 'dialogue', 'summary', 'topic'],\n",
+              "        num_rows: 500\n",
+              "    })\n",
+              "    test: Dataset({\n",
+              "        features: ['id', 'dialogue', 'summary', 'topic'],\n",
+              "        num_rows: 1500\n",
+              "    })\n",
+              "})"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "huggingface_dataset_name = \"knkarthick/dialogsum\"\n",
         "\n",
@@ -149,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -237,7 +283,16 @@
         "id": "BHv9E1j0MsH3",
         "outputId": "094b8f32-6507-4677-e0a3-6b53235ce510"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/beltransc/.local/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "model_name='google/flan-t5-small'\n",
         "original_model = AutoModelForSeq2SeqLM.from_pretrained(model_name, torch_dtype=torch.bfloat16)\n",
@@ -255,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -263,7 +318,17 @@
         "id": "XGJhyL1rMsH3",
         "outputId": "6e1b5b8c-c69f-4db0-eb21-bea0e4f224c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "trainable model parameters: 190\n",
+            "all model parameters: 190\n",
+            "percentage of trainable model parameters: 100.00%\n"
+          ]
+        }
+      ],
       "source": [
         "def print_number_of_trainable_model_parameters(model):\n",
         "    \"\"\"\n",
@@ -315,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -323,7 +388,39 @@
         "id": "rEY1_yOHMsH4",
         "outputId": "e357b544-3e79-4f36-86b9-1bcef7af1a73"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "---------------------------------------------------------------------------------------------------\n",
+            "INPUT PROMPT:\n",
+            "\n",
+            "Summarize the following conversation.\n",
+            "\n",
+            "#Person1#: Have you considered upgrading your system?\n",
+            "#Person2#: Yes, but I'm not sure what exactly I would need.\n",
+            "#Person1#: You could consider adding a painting program to your software. It would allow you to make up your own flyers and banners for advertising.\n",
+            "#Person2#: That would be a definite bonus.\n",
+            "#Person1#: You might also want to upgrade your hardware because it is pretty outdated now.\n",
+            "#Person2#: How can we do that?\n",
+            "#Person1#: You'd probably need a faster processor, to begin with. And you also need a more powerful hard disc, more memory and a faster modem. Do you have a CD-ROM drive?\n",
+            "#Person2#: No.\n",
+            "#Person1#: Then you might want to add a CD-ROM drive too, because most new software programs are coming out on Cds.\n",
+            "#Person2#: That sounds great. Thanks.\n",
+            "\n",
+            "Summary:\n",
+            "\n",
+            "---------------------------------------------------------------------------------------------------\n",
+            "BASELINE HUMAN SUMMARY:\n",
+            "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
+            "\n",
+            "---------------------------------------------------------------------------------------------------\n",
+            "MODEL GENERATION - ZERO SHOT:\n",
+            "How would you like to upgrade your computer?\n"
+          ]
+        }
+      ],
       "source": [
         "index = 200\n",
         "\n",
@@ -386,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -430,7 +527,17 @@
         "id": "bW1cDfiDMsH4",
         "outputId": "fa063923-fec6-4d33-991d-0066f27da7c6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Map: 100%|██████████| 12460/12460 [00:03<00:00, 3463.64 examples/s]\n",
+            "Map: 100%|██████████| 500/500 [00:00<00:00, 3283.10 examples/s]\n",
+            "Map: 100%|██████████| 1500/1500 [00:00<00:00, 3498.56 examples/s]\n"
+          ]
+        }
+      ],
       "source": [
         "def tokenize_function(example):\n",
         "    \"\"\"\n",
@@ -477,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -521,7 +628,17 @@
         "id": "eWltCyHBMsH5",
         "outputId": "df1517c8-7253-48c0-c801-9b284fa8ac81"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Filter: 100%|██████████| 12460/12460 [00:02<00:00, 5379.25 examples/s]\n",
+            "Filter: 100%|██████████| 500/500 [00:00<00:00, 5399.96 examples/s]\n",
+            "Filter: 100%|██████████| 1500/1500 [00:00<00:00, 5443.40 examples/s]\n"
+          ]
+        }
+      ],
       "source": [
         "tokenized_datasets = tokenized_datasets.filter(lambda example, index: index % 1000 == 0, with_indices=True)"
       ]
@@ -537,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -545,7 +662,32 @@
         "id": "V3REDsFbMsH5",
         "outputId": "34e91fb3-83f0-433d-f363-28520ff2d123"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shapes of the datasets:\n",
+            "Training: (13, 2)\n",
+            "Validation: (1, 2)\n",
+            "Test: (2, 2)\n",
+            "DatasetDict({\n",
+            "    train: Dataset({\n",
+            "        features: ['input_ids', 'labels'],\n",
+            "        num_rows: 13\n",
+            "    })\n",
+            "    validation: Dataset({\n",
+            "        features: ['input_ids', 'labels'],\n",
+            "        num_rows: 1\n",
+            "    })\n",
+            "    test: Dataset({\n",
+            "        features: ['input_ids', 'labels'],\n",
+            "        num_rows: 2\n",
+            "    })\n",
+            "})\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"Shapes of the datasets:\")\n",
         "print(f\"Training: {tokenized_datasets['train'].shape}\")\n",
@@ -567,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "ZBsfjPshMsH5"
       },
@@ -580,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "d8SovBIxMsH5"
       },
@@ -618,7 +760,35 @@
         "id": "dLVLnlqxMsH5",
         "outputId": "18af7452-745f-4c12-e9ec-5388c6c3ee3e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='2' max='20' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 2/20 : < :, Epoch 0.50/10]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Step</th>\n",
+              "      <th>Training Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "trainer.train()"
       ]
@@ -1651,7 +1821,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "NL",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1665,7 +1835,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.10"
+      "version": "3.12.3"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
