Finetuning ipynb added

--- a/notebook/finetuning.ipynb
+++ b/notebook/finetuning.ipynb
@@ -1774,43 +1774,102 @@
         "- Why is it important to prepend instructions like \"Summarize the following conversation\" when constructing prompts for training a language model?\n",
         ">>> Write your answer here\n",
         "\n",
+        "- **Task conditioning:** An instruction primes the model’s internal routing to the right behavior, reducing ambiguity and off-task generation.  \n",
+        "- **Consistent supervision:** During training, a stable pattern (“Instruction → Input → Output”) helps the loss focus on the intended mapping, improving gradient signal and convergence.  \n",
+        "- **Domain shift reduction:** In deployment, prompts will include instructions; mirroring that format at training time narrows the train–serve mismatch.  \n",
+        "- **Better controllability & evaluation:** Clear instructions make outputs easier to compare and grade against references.  \n",
+        "\n",
+        "---\n",
         "- How does tokenization affect the model’s performance? What challenges might arise from long input sequences in tasks like summarization?\n",
         ">>> Write your answer here\n",
+        "\n",
+        "\n",
+        "- **Subword splits & vocabulary coverage:** Good tokenization preserves morphemes/words; poor splits inflate sequence length, raise compute, and dilute context windows.  \n",
+        "- **Semantic fidelity:** Token boundaries influence how attention aggregates meaning; domain-mismatched tokenizers (e.g., code vs. news) can hurt downstream metrics.  \n",
+        "- **Long-sequence challenges:**  \n",
+        "  - **Quadratic attention cost** (O(n²) memory/compute).  \n",
+        "  - **Truncation loss** of salient content, harming ROUGE/faithfulness in summarization.  \n",
+        "  - **Position encodings drift** (extrapolation issues when contexts exceed pretraining ranges).  \n",
+        "  - **Error propagation:** Long prompts increase exposure to earlier tokenization noise.  \n",
+        "- **Mitigations:** Consistent tokenizer, chunking with overlap, hierarchical/planner summaries, long-context variants (ALiBi/RoPE scaling), dynamic padding/bucketing.  \n",
+        "\n",
+        "---\n",
         "\n",
         "## Model Performance and Training:\n",
         "\n",
         "Why do you think full fine-tuning achieves better results than zero-shot learning but might be less efficient for large-scale applications?\n",
         ">>> Write your answer here\n",
         "\n",
+        "- **Performance:** Updating *all* weights adapts the entire representation stack to the task, usually yielding the best accuracy/ROUGE and better calibration than zero-shot.  \n",
+        "- **Cost/Inefficiency:** Requires storing and serving a full model *per task/domain*; high GPU memory, longer training, higher carbon/ops cost, and risk of catastrophic forgetting across tasks.  \n",
+        "\n",
+        "---\n",
+        "\n",
         "## LoRA Fine-Tuning:\n",
         "\n",
         "- How does LoRA reduce the number of trainable parameters compared to full fine-tuning, and why might this be beneficial for larger models?\n",
         ">>> Write your answer here\n",
+        "- **Mechanism:** Freeze base weights; for selected projection matrices (e.g., attention Q/K/V/O, and often MLP up/down), insert low-rank adapters **A·Bᵀ** with rank *r* ≪ d. Only A and B are trained.  \n",
+        "- **Benefits:**  \n",
+        "  - **Parameter & memory reduction** (orders of magnitude fewer trainables).  \n",
+        "  - **Speed** (faster steps, lower optimizer state).  \n",
+        "  - **Modularity** (swap adapters per task; compose them).  \n",
+        "  - **Stability** (retains pretrained knowledge, less overfitting).  \n",
+        "---\n",
         "\n",
         "- LoRA modifies certain attention weights in the model. Why do you think only specific parts of the model are updated, and how does this affect its generalization to new tasks?\n",
         ">>> Write your answer here\n",
+        "- **Targeted capacity:** Attention and feed-forward projections carry most task-specific signal; modifying them suffices for many tasks.  \n",
+        "- **Regularization by design:** Freezing the rest preserves general knowledge → better out-of-domain robustness than full FT on small data.  \n",
+        "- **Trade-off:** Slight ceiling vs. full FT on very specialized tasks; but usually near-SOTA with a fraction of cost.  \n",
+        "\n",
+        "---\n",
         "\n",
         "## Prompt Tuning:\n",
         "\n",
         "- In your own words, explain how prompt tuning differs from both full fine-tuning and LoRA. Why is it referred to as an additive fine-tuning technique?\n",
         ">>> Write your answer here\n",
         "\n",
+        "- **Difference:** The base model is **fully frozen**; learn only a small set of **continuous prompt embeddings** prepended to the input. LoRA edits internal layers; full FT edits all weights.  \n",
+        "- **Additive:** You **add** a tiny parameter vector (soft prompts) without altering existing weights—hence “additive fine-tuning.”  \n",
+        "---\n",
         "- How does prompt tuning impact the number of parameters that are trained? Why is this method more efficient than full fine-tuning?\n",
         ">>> Write your answer here\n",
-        "\n",
+        "- **Tiny footprint:** Only the prompt embeddings (e.g., tens of thousands of parameters) are trained; optimizer state and memory are minimal.  \n",
+        "- **Efficiency:** Short trainings, cheap storage/serving, easy multi-task deployment (swap prompts). Ideal when you must support many tasks on one frozen model.  \n",
+        "---\n",
         "- How do the results from prompt-tuning compare to LoRA and full fine-tuning? Which technique performed best in terms of ROUGE scores?\n",
         ">>> Write your answer here\n",
+        "- **Typical pattern (especially for 1–7B models):**  \n",
+        "  **Full fine-tuning ≥ LoRA > Prompt tuning** on ROUGE-1/2/L.  \n",
+        "  Prompt tuning can approach LoRA as model size grows and with longer/optimized soft prompts, but usually lags slightly on medium models.  \n",
         "\n",
+        "---\n",
         "## Efficiency and Trade-offs:\n",
         "\n",
         "- Given the results of your experiments, which fine-tuning method (LoRA, full fine-tuning, or prompt-tuning) do you think strikes the best balance between computational efficiency and model performance? Why?\n",
         ">>> Write your answer here\n",
-        "\n",
+        "- **LoRA** generally **strikes the best balance**: near-full-FT ROUGE with a small fraction of trainable params, faster training, easy adapter management, and strong generalization.  \n",
+        "---\n",
         "- If you were to deploy one of these models in a production system with limited computational resources, which approach would you choose and why?\n",
         ">>> Write your answer here\n",
+        "- **Choose LoRA** if you need strong quality with constrained GPUs and want modular adapters per domain.  \n",
+        "- **Choose Prompt Tuning** if you must support **many** tasks/prompts with ultra-low overhead and can accept a small quality drop.  \n",
+        "- **Avoid full FT** unless you absolutely need the last few ROUGE points and can afford the operational cost.  \n",
+        "---\n",
         "\n",
         "- How would you extend these methods to other tasks beyond summarization (e.g., machine translation or question-answering)?\n",
-        ">>> Write your answer here\n"
+        ">>> Write your answer here\n",
+        "- **Data & prompts:** Curate task-specific instructions and exemplars; ensure tokenizer/domain match (e.g., code, biomedical).  \n",
+        "- **LoRA placement:**  \n",
+        "  - **Seq2seq (e.g., T5):** apply LoRA to encoder/decoder attention and cross-attention; consider higher ranks for MT.  \n",
+        "  - **Encoder-only QA/retrieval:** adapters on self-attention and MLP; pair with retrieval augmentation.  \n",
+        "- **Prompt tuning:** Learn task-specific soft prompts; for multi-task, use **prompt ensembling** or **gated prompt routing**.  \n",
+        "- **Evaluation:** Swap ROUGE for task-appropriate metrics (BLEU/chrF/COMET for MT; EM/F1 for extractive QA; nDCG/MRR for retrieval).  \n",
+        "- **Practicalities:** Mixed precision, gradient checkpointing, dynamic padding/bucketing, early stopping; consider 4/8-bit weight/optimizer quantization to cut memory.  \n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     }
   ],
